# DocumentSearch

./: .env.example  .gitignore  README.md  README.v2.2_update.md  pyproject.toml  requirements.txt  requirements.v2.2_update.txt  start_everything.bat
.claude/: settings.local.json
config/: config.v2.2_update.yaml  config.yaml  config_aws.yaml  config_minimal.yaml  jvm.options  opensearch.v2.2_update.yml  opensearch.yml  tika-config.xml
runtime/cache/: dashboard_reset.marker
runtime/discovery/: bloom_filter_worker_1.pkl.meta.json  bloom_filter_worker_1.pkl.meta.v2.2_update.json  bloom_filter_worker_99.pkl.meta.json
src/: main.py
src/api/: query_builder.py  search_api.v2.2_update.py
src/core/: config_manager.py  config_manager.v2.2_update.py  constants.py  constants.v2.2_update.py  logging_manager.py  queue_manager.py  redis_queue_manager.py  redis_queue_manager.v2.2_update.py  reporting_manager.py
src/discovery/: discovery_worker.py  discovery_worker.v2.2_update.py  file_scanner.py
src/extraction/: accuracy_analyzer.py  content_extractor.py  extraction_worker.py  extraction_worker.v2.2_update.py  tika_client.py
src/indexing/: document_builder.py  document_builder.v2.2_update.py  indexing_worker.py  indexing_worker.v2.2_update.py  opensearch_client.py
src/ocr/: image_preprocessor.py  image_preprocessor_advanced.py  image_preprocessor_advanced.v2.2_update.py  ocr_factory.py  ocr_tier_router.py  ocr_worker.py  ocr_worker.v2.2_update.py  paddle_wrapper.py  snippet_filter.py  tesseract_wrapper.py  visual_memory.py  vl16_wrapper.py
src/tools/: clear_redis.py  (+5 more)
(+472 files in other folders)
