[project]
name = "radar-document-search"
version = "2.0.0"
description = "Enterprise document ingestion, OCR extraction, and full-text search platform"
requires-python = ">=3.10"
license = {text = "Proprietary"}

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
